2_project/kubeops-gitops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeops-dev
  labels:
    app: kubeops
