2_project/kubeops-gitops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeops
  namespace: kubeops-dev
  labels:
    app: kubeops
spec:
  type: ClusterIP
  selector:
    app: kubeops
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
